# ns3-uav-key-management

./: .gitignore  .lock-ns3_linux_build  Fanet3D-0-0.pcap  Fanet3D-1-0.pcap  Fanet3D-10-0.pcap  Fanet3D-11-0.pcap  Fanet3D-12-0.pcap  Fanet3D-13-0.pcap  Fanet3D-14-0.pcap  Fanet3D-15-0.pcap  Fanet3D-16-0.pcap  Fanet3D-17-0.pcap  Fanet3D-18-0.pcap  Fanet3D-19-0.pcap  Fanet3D-2-0.pcap  Fanet3D-3-0.pcap  Fanet3D-4-0.pcap  Fanet3D-5-0.pcap  Fanet3D-6-0.pcap  Fanet3D-7-0.pcap  Fanet3D-8-0.pcap  Fanet3D-9-0.pcap  Fanet3D.tr  Fanet3D.xml  init_project.sh
scratch/uav-secure-fanet/: CMakeLists.txt  build_deps.sh  main.cc  run.sh  wscript  wscript.txt
scratch/uav-secure-fanet/apps/: REKEY_LATENCY_FIX.h  REKEY_LATENCY_FIX.h:Zone.Identifier  uav-compromise-detector.cc  uav-compromise-detector.h  uav-handover-manager.cc  uav-handover-manager.cc.bak_crash  uav-handover-manager.cc.bak_hojoin  uav-handover-manager.h  uav-jammer-attack-handler.cc  uav-jammer-attack-handler.h  uav-jammer-error-model.h  uav-jammer-manager.cc  uav-jammer-manager.h  uav-join-event.cc  uav-join-event.h  uav-kdc-app.cc  uav-kdc-app.cc.bak_di  uav-kdc-app.cc.bak_fix2  uav-kdc-app.h  uav-kdc-app.h.bak_di  uav-kdc-app.h.bak_telkdc  uav-leave-event.cc  uav-leave-event.h  uav-mtk-distribution.cc  uav-mtk-distribution.h  uav-multicast-manager.cc  uav-multicast-manager.h  uav-rekey-manager.cc  uav-rekey-manager.h  uav-skdc-app.cc  uav-skdc-app.cc.bak_di  uav-skdc-app.cc.bak_fix2  uav-skdc-app.h  uav-skdc-app.h.bak_di  uav-skdc-app.h.bak_telkdc  uav-skdc-app.h.bak_vis  uav-tek-manager.cc  uav-tek-manager.h  uav-uav-app.cc  uav-uav-app.cc.bak  (+6 more)
scratch/uav-secure-fanet/crypto/: uav-aes.cc  uav-aes.h  uav-bigint-utils.h  uav-bigint.cc  uav-bigint.h  uav-crt-manager.cc  uav-crt-manager.h  uav-crypto-params.cc  uav-crypto-params.cc.bak_di  uav-crypto-params.h  uav-handover-protocol.h  uav-handover-protocol.h:Zone.Identifier  uav-hmac.cc  uav-hmac.h  uav-openssl-ctx.cc  uav-openssl-ctx.h  uav-openssl-error.h  uav-openssl-rand.cc  uav-openssl-rand.h  uav-replay.cc  uav-replay.h  uav-sha256.h
scratch/uav-secure-fanet/graphs/: NETANIM_VISUALIZATION_GUIDE.txt  analyze_rekey.py  analyze_rekey.py.bak  analyze_rekey.py:Zone.Identifier  filter_olsr_from_netanim.py  fix_netanim_xml.py  fix_netanim_xml.py:Zone.Identifier  generate_graphs.py  generate_graphs.py:Zone.Identifier  global_summary.py  plot_all.py  plot_rekey_perf.py  report.html
scratch/uav-secure-fanet/headers/: uav-auth-packet.cc  uav-auth-packet.h  uav-base-header.cc  uav-base-header.h  uav-data-packet.cc  uav-data-packet.h  uav-handover-packet.cc  uav-handover-packet.h  uav-join-packet.cc  uav-join-packet.h  uav-mtk-packet.cc  uav-mtk-packet.h  uav-packet-enums.cc  uav-packet-enums.h  uav-packet-manager.cc  uav-packet-manager.h  uav-rekey-packet.cc  uav-rekey-packet.h
scratch/uav-secure-fanet/json/: crypto_params.json  safe_primes.json  safe_primes_512.json  simulation_config.json
scratch/uav-secure-fanet/metrics/: uav-csv-export.cc  uav-csv-export.h  uav-delay-metrics.cc  uav-delay-metrics.h  uav-metrics-framework.cc  uav-metrics-framework.h  uav-pcap-export.cc  uav-pcap-export.h  uav-pdr-metrics.cc  uav-pdr-metrics.h  uav-rekey-latency.cc  uav-rekey-latency.h  uav-routing-overhead.cc  uav-routing-overhead.h  uav-sinr-metrics.cc  uav-sinr-metrics.h  uav-throughput-metrics.cc  uav-throughput-metrics.h  uav-timing-profiler.cc  uav-timing-profiler.h
scratch/uav-secure-fanet/mobility/: uav-cluster-movement.cc  uav-cluster-movement.h  uav-gauss-markov.cc  uav-gauss-markov.h  uav-jammer-mobility.cc  uav-jammer-mobility.h  uav-mobility-manager.cc  uav-mobility-manager.h
scratch/uav-secure-fanet/output/: batch_report.txt  batch_stats.csv  delay.csv  flowmonitor.xml  metrics_global.csv  metrics_per_cluster.csv  metrics_per_uav.csv  pdr.csv  rekey_latency.csv  routing_overhead.csv  sinr.csv  throughput.csv  uav-fanet-anim.xml
scratch/uav-secure-fanet/patch/: INTEGRATION_PATCH.cc  cluster_radius_handover_patch.py  cluster_radius_handover_patch.py:Zone.Identifier  crash_fix.py  crash_fix.py:Zone.Identifier  deploy_metrics_patch.sh  deploy_metrics_patch.sh:Zone.Identifier  di_update_patch.py  di_update_patch.py:Zone.Identifier  files (4).zip:Zone.Identifier  fix_simulation_complete.py  fix_simulation_complete.py:Zone.Identifier  gen_crypto_gk_patch.py  gen_crypto_gk_patch.py:Zone.Identifier  handover_join_fix.py  handover_join_fix.py:Zone.Identifier  netanim_key_flow_patch.py  netanim_key_flow_patch.py:Zone.Identifier  netanim_visual_patch.py  netanim_visual_patch.py:Zone.Identifier  plot_metrics_full.py  rekey_perf_scenario_mf_patch.py  rekey_perf_scenario_mf_patch.py:Zone.Identifier  telemetry_fix2.py  telemetry_fix2.py:Zone.Identifier  telemetry_to_kdc_patch.py  telemetry_to_kdc_patch.py:Zone.Identifier  uav-metrics-framework.cc  uav-metrics-framework.h  uav-metrics-framework.h:Zone.Identifier
scratch/uav-secure-fanet/pcap/: uav-csma-0-0.pcap  uav-csma-1-0.pcap  uav-csma-2-0.pcap  uav-csma-3-0.pcap  uav-wifi-1-1.pcap  uav-wifi-10-0.pcap  uav-wifi-11-0.pcap  uav-wifi-12-0.pcap  uav-wifi-13-0.pcap  uav-wifi-14-0.pcap  uav-wifi-15-0.pcap  uav-wifi-16-0.pcap  uav-wifi-17-0.pcap  uav-wifi-18-0.pcap  uav-wifi-19-0.pcap  uav-wifi-2-1.pcap  uav-wifi-20-0.pcap  uav-wifi-21-0.pcap  uav-wifi-22-0.pcap  uav-wifi-3-1.pcap  uav-wifi-4-0.pcap  uav-wifi-5-0.pcap  uav-wifi-6-0.pcap  uav-wifi-7-0.pcap  uav-wifi-8-0.pcap  uav-wifi-9-0.pcap
scratch/uav-secure-fanet/routing/: uav-csma-backbone.cc  uav-csma-backbone.h  uav-flowmonitor.cc  uav-flowmonitor.h  uav-olsr-manager.cc  uav-olsr-manager.h  uav-queue-manager.cc  uav-queue-manager.h  uav-topology.cc  uav-topology.cc.bak  uav-topology.h  uav-wifi-config.cc  uav-wifi-config.h
scratch/uav-secure-fanet/scenario/: rekey_perf_scenario.cc  rekey_perf_scenario.cc.bak_complete  rekey_perf_scenario.cc.bak_crash  rekey_perf_scenario.cc.bak_hojoin  rekey_perf_scenario.cc.bak_keyflow  rekey_perf_scenario.cc.bak_radius  rekey_perf_scenario.cc.bak_visual  rekey_perf_scenario.cc:Zone.Identifier  rekey_perf_scenario.h  (+1 more)
(+755 files in other folders)
