find_package(OpenSSL REQUIRED)

set(uav_sources
    main.cc
    utils/uav-error.cc
    utils/uav-enum-strings.cc
    utils/uav-time-utils.cc
    utils/uav-string-utils.cc
    utils/uav-byte-utils.cc
    utils/uav-math-utils.cc
    utils/uav-file-utils.cc
    utils/uav-log-level.cc
    utils/uav-log-sink.cc
    utils/uav-logger.cc
    utils/uav-csv-logger.cc
    crypto/uav-openssl-ctx.cc
    crypto/uav-openssl-rand.cc
    crypto/uav-bigint.cc
    crypto/uav-aes.cc
    crypto/uav-hmac.cc
    crypto/uav-replay.cc
    crypto/uav-crypto-params.cc
    crypto/uav-crt-manager.cc
    headers/uav-packet-enums.cc
    headers/uav-base-header.cc
    headers/uav-auth-packet.cc
    headers/uav-join-packet.cc
    headers/uav-rekey-packet.cc
    headers/uav-mtk-packet.cc
    headers/uav-handover-packet.cc
    headers/uav-data-packet.cc
    headers/uav-packet-manager.cc
    routing/uav-topology.cc
    routing/uav-wifi-config.cc
    routing/uav-csma-backbone.cc
    routing/uav-olsr-manager.cc
    routing/uav-flowmonitor.cc
    routing/uav-queue-manager.cc
    mobility/uav-mobility-manager.cc
    mobility/uav-gauss-markov.cc
    mobility/uav-cluster-movement.cc
    mobility/uav-jammer-mobility.cc
    apps/uav-kdc-app.cc
    apps/uav-skdc-app.cc
    apps/uav-uav-app.cc
    apps/uav-multicast-manager.cc
    apps/uav-tek-manager.cc
    apps/uav-mtk-distribution.cc
    apps/uav-join-event.cc
    apps/uav-leave-event.cc
    apps/uav-jammer-manager.cc
    apps/uav-handover-manager.cc
    apps/uav-compromise-detector.cc
    apps/uav-rekey-manager.cc
    apps/uav-jammer-attack-handler.cc
    visualization/uav-netanim.cc
    visualization/uav-pyviz.cc
    visualization/uav-node-color.cc
    visualization/uav-packet-viz.cc
    visualization/uav-event-annotations.cc
    metrics/uav-throughput-metrics.cc
    metrics/uav-delay-metrics.cc
    metrics/uav-pdr-metrics.cc
    metrics/uav-routing-overhead.cc
    metrics/uav-rekey-latency.cc
    metrics/uav-sinr-metrics.cc
    metrics/uav-csv-export.cc
    metrics/uav-pcap-export.cc
)

build_exec(
    EXECNAME uav-secure-fanet
    EXECNAME_PREFIX scratch_uav-secure-fanet_
    SOURCE_FILES "${uav_sources}"
    LIBRARIES_TO_LINK
        ${libnetanim}
        "${ns3-libs}"
        "${ns3-contrib-libs}"
        OpenSSL::SSL
        OpenSSL::Crypto
    EXECUTABLE_DIRECTORY_PATH
        ${CMAKE_CURRENT_BINARY_DIR}/
)

target_include_directories(
    scratch_uav-secure-fanet_uav-secure-fanet PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/utils
    ${CMAKE_CURRENT_SOURCE_DIR}/crypto
    ${CMAKE_CURRENT_SOURCE_DIR}/headers
    ${CMAKE_CURRENT_SOURCE_DIR}/routing
    ${CMAKE_CURRENT_SOURCE_DIR}/mobility
    ${CMAKE_CURRENT_SOURCE_DIR}/apps
)
